fixed scrollbar style, added table container with styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,23 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Make scrollbar thinner */
+::-webkit-scrollbar {
+  height: 6px; /* Adjust for horizontal scrollbar */
+  width: 6px;  /* Adjust for vertical scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
